# rag-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
data/: dicionario_dados.xlsx  filiais.parquet
docs/: README.md  queries-piloto.md
docs/ADRs/: 001-llm-provider-gemini.md  002-vector-store-qdrant.md  003-chunking-section-aware-anvisa.md  004-langchain-sem-langgraph.md  004-langchain.md  005-streaming-sse.md
docs/superpowers/plans/: 2026-05-20-frontend-chat.md
docs/superpowers/specs/: 2026-05-20-frontend-chat-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: AssistantMessage.tsx  ChatInput.tsx  CitationChips.tsx  EmptyState.tsx  MessageList.tsx  ThinkingIndicator.tsx  UserMessage.tsx
frontend/src/components/layout/: ChatLayout.tsx  ChatView.tsx  Sidebar.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useChatStream.ts  useSessionList.ts
frontend/src/lib/: api.ts
frontend/src/lib/__tests__/: api.test.ts
frontend/src/types/: chat.ts
requests/: chat.rest  echo.rest  health.rest  requests.http
scripts/: ingest_bulas.py  profile_sections.py
src/bulas_assistant/: __init__.py  main.py
src/bulas_assistant/assistant/: agent_tools.py  assistant_service.py  prompts.py  sectionizer.py
src/bulas_assistant/models/: filial_models.py  tool_models.py
src/bulas_assistant/routes/: admin_route.py  chat_route.py  sessions_route.py
src/bulas_assistant/services/: chat_history_service.py  filiais_service.py  ingestion_service.py  rag_service.py  trace_service.py
src/bulas_assistant/utils/: builders.py  exceptions.py  handle_errors.py  logger.py  pdf.py  settings.py  sse.py
src/panvel_assistant/: __init__.py  main.py
src/panvel_assistant/assistant/: agent_tools.py  assistant_service.py  prompts.py  sectionizer.py
src/panvel_assistant/models/: bula.py  chat.py  filial_models.py  tool.py  tool_models.py
src/panvel_assistant/routes/: admin.py  chat.py  chat_route.py  echo.py  sessions_route.py
src/panvel_assistant/services/: chat_history_service.py  chat_service.py  filiais_service.py  ingestion_service.py  llm_service.py  rag_service.py  trace_service.py
src/panvel_assistant/utils/: builders.py  exceptions.py  handle_errors.py  logger.py  pdf.py  settings.py  sse.py
tasks/: 00-overview.md  01-bootstrap-utils.md  02-models-pydantic.md  03-llm-basico-chat-sse.md  04-tools-filiais.md  05-rag-ingestao.md  06-rag-retrieval-chat-integration.md  07-observabilidade.md  08-docker-compose-backend.md  09-docs-adrs-readme.md  10-frontend-setup.md  11-frontend-integracao.md  12-frontend-polish.md
tests/: conftest.py
tests/integration/: conftest.py  test_admin_route.py  test_chat_route.py  test_chat_with_rag.py  test_ingestion.py  test_retrieval.py  test_sessions_routes.py  test_tool_buscar_bulas.py
tests/unit/: test_assistant_service.py  test_chat_history_service.py  test_chat_service.py  test_chunking.py  test_edge_cases.py  test_filiais_service.py  test_models.py  test_rag_dedup.py  test_rag_filter.py  test_routes_echo.py  test_sectionizer.py  test_sessions_service.py  test_tools.py  test_trace_service.py  test_utils.py
