[project]
name = "panvel-assistant"
version = "0.1.0"
description = "Panvel Assistente Conversacional Farmacêutico — RAG sobre bulas + tool calling em filiais."
readme = "README.md"
authors = [
    { name = "Nicolas Docolas", email = "nicolas.docolas1804@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "redis>=5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "fakeredis>=2.26",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B017", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=panvel_assistant --cov-report=term-missing --cov-fail-under=70"
