[project]
name = "bulas-assistant"
version = "0.1.0"
description = "RAG Bulas — Assistente farmacêutico sobre bulas Anvisa + tool calling em filiais."
readme = "README.md"
authors = [
    { name = "Nicolas Docolas", email = "nicolas@docolas.com.br" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "langchain>=0.3",
    "redis>=5.2",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "pdfplumber>=0.11",
    "qdrant-client>=1.12",
    "fastembed>=0.4",
    "langchain-text-splitters>=0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "fakeredis>=2.26",
    "mypy>=1.13",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W/F = base; I/N/UP/B/SIM/RUF = idioms & modern Python.
# ASYNC = trio/async pitfalls; TID = ban old-style relative imports; C90 = mccabe.
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "ASYNC", "TID", "C90"]
ignore = ["D100", "D104"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B017", "S101"]
# FastAPI's recommended idiom uses Depends() in argument defaults; B008 fires
# false positives there. Route modules are the only place we accept this.
"src/bulas_assistant/routes/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=bulas_assistant --cov-report=term-missing --cov-fail-under=90"
markers = [
    "integration: end-to-end tests that hit external services (Qdrant, Gemini)",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
files = ["src/bulas_assistant"]
